feat: GPS 접근 허용 팝업 퍼블리싱

--- a/publishing/GPS-permission-popup/GPS-permission-popup.html
+++ b/publishing/GPS-permission-popup/GPS-permission-popup.html
@@ -13,10 +13,11 @@
         <div class="gps-permission-explain">
             사용자의 위치에 접근할 수 있도록 <br> 허용하시겠습니까?
         </div>
+        <hr />
         <section class="pms-btn-flexbox">
-            <!-- <hr> -->
-            <button class="gps-pms-true-btn">허용</button>
-            <button class="gps-pms-false-btn">허용 안 함</button>
+            <button class="gps-pms-true-btn" onClick="">허용</button>
+            <div class="btn-separate-line"></div>
+            <button class="gps-pms-false-btn" onClick="">허용 안 함</button>
         </section>
     </div>
 </body>
