--- a/owl-mailbox-front/public/index.html
+++ b/owl-mailbox-front/public/index.html
@@ -27,7 +27,8 @@
     <title>Owl Mailbox</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript" 
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4f3b0040ca6df40cb80a3e3ddcb03632"></script> 
     <div id="root"></div>
     <!--
       This HTML file is a template.
